# cuda-labs

./: .gitignore  Makefile
cuda-webcam-filter/: CMakeLists.txt  README.md
cuda-webcam-filter/docs/: profile.nsys-rep
cuda-webcam-filter/src/: main.cpp
cuda-webcam-filter/src/input_args_parser/: input_args_parser.cpp  input_args_parser.h
cuda-webcam-filter/src/kernels/: convolution_kernels.cu  kernels.h
cuda-webcam-filter/src/pipeline/: filter_pipeline.cu  filter_pipeline.h  wipe_transition.cu  wipe_transition.h
cuda-webcam-filter/src/utils/: filter_utils.cpp  filter_utils.h  input_handler.cpp  input_handler.h  timing_overlay.cpp  timing_overlay.h
cuda_common/: CMakeLists.txt
cuda_common/include/: cuda_check.cuh  cuda_const.cuh
image-convolution/: CMakeLists.txt  main.cpp
image-convolution/include/: convolution.cuh  convolution.h  kernels.h
image-convolution/src/: convolution.cpp  convolution.cu  kernels.cpp
matrix-transposition/: CMakeLists.txt  README.md  main.cpp
matrix-transposition/include/: cuda_common.cuh  matrix.h  transposition.cuh  transposition.h
matrix-transposition/src/: kernel.cu  matrix.cpp  transposition.cpp  transposition.cu
